# treegit

./: README.md  pyproject.toml  setup.py
benchmarks/: commit_perf.py
src/treegit/: __init__.py  __main__.py  cli.py  diffing.py  errors.py  hashing.py  index.py  models.py  objects.py  repository.py  store.py  working_tree.py
src/treegit/mcts/: __init__.py  engine.py  models.py  runner.py  spec.py  store.py
src/treegit/policies/: __init__.py  codex.py
tests/: __init__.py  test_treegit.py
