[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "treegit"
version = "0.1.0"
description = "A local-only Git-shaped version control system for exploring codebase trees."
requires-python = ">=3.9"

[project.scripts]
treegit = "treegit.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
